<resources>
    <string name="app_name">EatWithMe</string>
    <string name="facebook_application_id">696989651252245</string>
    <string name="facebook_login_protocol_scheme">fb696989651252245</string>
    <!-- filename and keys for sharedPreferences for custom location management -->
    <string name="custom_location_file_key">custom_location</string>
    <string name="latitude">lat</string>
    <string name="longitude">long</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_table_title">Create Table</string>
    <!-- dialog profilo incompleto -->
    <string name="incomplete_account_message">Per favore aggiorna il tuo profilo con le tue
        informazioni
    </string>
    <string name="incomplete_account_title">Account non completo</string>
    <string name="not_now">Non ora</string>
    <string name="incomplete_account_pos_button">Modifica Profilo</string>
    <!-- dialog errore generico -->
    <string name="generic_error_title">Errore</string>
    <string name="generic_error_message">Siamo spiacenti, l\'operazione non è andata a buon fine</string>
    <string name="generic_error_button">ok</string>
    <!-- dialog posizione non impostata -->
    <string name="missing_location_title">Posizione assente</string>
    <string name="missing_location_message">Non è possibile creare un tavolo senza una posizione.</string>
    <string name="missing_location_pos_button">Scegli posizione</string>
    <string name="rationale_message_location_permission">Per creare un tavolo occorre una posizione,
    puoi impostarne una manualmente o concederci il permesso di accedere alla geolocalizzazione
    </string>
    <string name="past_date_error">Imposta l\'orario tra almeno 30 minuti.</string>
    <string name="max_participants_too_low_error">Almeno 2 partecipanti</string>
    <string name="table_name_length_error">Inserisci un nome lungo almeno 3 caratteri</string>


    <!-- Creazione tavolo -->
    <string name="name_title">Come vuoi chiamare il tuo tavolo?</string>\
    <string name="name_subtitle">Assegna un bel nome e descrivi brevemente cosa vuoi mangiare o
    di cosa vorresti parlare.</string>
    <string name="name_hint">Nome</string>
    <string name="description_hint">Descrizione</string>
    <string name="button_next">Continua</string>
    <string name="button_previous">Indietro</string>
    <string name="date_title">Quando intendi prenotare?</string>
    <string name="date_subtitle">Dai il tempo agli altri di vedere il tuo tavolo, imposta un orario
    tra almeno 30 minuti.</string>
    <string name="date_hint">Data</string>
    <string name="hour_hint">Ora</string>
    <string name="create_table_step1">Nome</string>
    <string name="create_table_step2">Data e Ora</string>
    <string name="create_table_step3">Ristorante</string>
    <string name="choose">Scegli</string>
    <string name="currency_symbol">€</string>
    <string name="success_title">Tavolo creato correttamente!</string>
    <string name="success_subtitle">Adesso gli utenti nei paraggi del luogo scelto vedranno il tuo tavolo.</string>
    <string name="success_editing_title">Tavolo modificato correttamente!</string>
    <string name="success_button">Entra</string>
    <string name="my_position">Tu</string>

    <!-- Menu -->
    <string name="menu_explore">Esplora</string>
    <string name="menu_my_tables">Tavoli</string>
    <string name="menu_new_table">Nuovo</string>
    <string name="menu_my_profile">Profilo</string>

    <!-- Profilo -->
    <string name="surname_hint">Cognome</string>
    <string name="birthday">Compleanno</string>
    <string name="birthday_date">Data nascita</string>
    <string name="telephone">Telefono</string>
    <string name="short_description">Breve descrizione di me</string>
    <string name="modify_profile">Modifica profilo</string>
    <string name="logout"><u>Logout</u></string>
    <string name="elimina_account">Elimina account</string>
    <string name="profile_logoutalert_title">Disconnessione</string>
    <string name="profile_logoutalert_description">Vuoi effettuare il logout?</string>
    <string name="profile_deletealert_title">Eliminazione account</string>
    <string name="profile_deletealert_description">Desideri eliminare definitivamente il tuo accuount? Cliccando su "si", tutti i tue dati verranno rimossi e non sarà più possibile recuperarli.</string>

    <!-- Info tavolo -->
    <string name="join">Partecipa</string>
    <string name="delete_table">Elimina tavolo</string>
    <string name="exit_table">Esci dal tavolo</string>
    <string name="modify_table">Modifica il tavolo</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="table_exit_title">Uscita dal tavolo</string>
    <string name="table_exit_description">Sei sicuro di voler abbandonare il tavolo?</string>
    <string name="table_exit_toast">Uscita in corso..</string>
    <string name="table_exit_toast_error">Si è verificato un errore, non sei uscito dal tavolo!</string>
    <string name="table_delete_title">Elimizione tavolo</string>
    <string name="table_delete_description">Sei sicuro di voler eliminare il tavolo?</string>
    <string name="table_delete_toast">Eliminazione in corso..</string>
    <string name="table_delete_toast_error">Si è verificato un errore, tavolo non eliminato!</string>

    <!-- Homepage -->
    <string name="homepage.title">Esplora</string>
    <string name="upcoming_tables">Prossimi Tavoli</string>
    <string name="nearby_tables">Nei Paraggi</string>
    <string name="categories_title">Categorie</string>
    <string name="homepage.see_all">Vedi Tutti</string>
    <string name="other_cities_title">Altre Città</string>
    <string name="principal_cities_title">Città Principali</string>
    <string name="owner">Proprietario</string>

    <!-- cities names -->
    <string name="rome">Roma</string>
    <string name="milan">Milano</string>
    <string name="florence">Firenze</string>
    <string name="naples">Napoli</string>

    <!-- meal categories names -->
    <string name="meal_lunch">Pranzo</string>
    <string name="meal_breakfast">Colazione</string>
    <string name="meal_dinner">Cena</string>
    <string name="meal_cocktail">Aperitivo</string>
    <string name="title_activity_splashscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Conferma modifiche utente -->
    <string name="txt_usr_data_confirm_cognome">Cognome:</string>
    <string name="txt_usr_data_confirm_modifica_informazioni">Modifica informazioni</string>
    <string name="txt_usr_data_confirm_nome">Nome:</string>
    <string name="txt_usr_data_confirm_data_di_nascita">Data di nascita:</string>
    <string name="txt_usr_data_confirm_descrizione">Descrizione:</string>
    <string name="txt_usr_data_confirm_conferma_modifiche">Conferma modifiche</string>

</resources>