<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/modifyProfileModalLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99000000"
    android:padding="24dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/confirmProfileInformationLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/btn_save_profile"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/txt_usr_data_confirm_conferma_modifiche"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_usrDescrizione" />

            <Button
                android:id="@+id/btnCloseProfileDataModal"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="46dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_baseline_close_24"
                app:iconGravity="textStart"
                app:iconSize="28dp"
                app:iconTint="@android:color/secondary_text_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/txtusernomecognome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                android:text="@string/txt_usr_data_confirm_modifica_informazioni"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/btnCloseProfileDataModal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtuserdescrizione"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/txt_usr_data_confirm_nome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtusernomecognome" />

            <TextView
                android:id="@+id/txt_usrNome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toEndOf="@+id/txtuserdescrizione"
                app:layout_constraintTop_toBottomOf="@+id/txtusernomecognome"
                tools:text="name" />

            <TextView
                android:id="@+id/txt_usrCognome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/txtuserdescrizione2"
                app:layout_constraintTop_toBottomOf="@+id/txt_usrNome"
                tools:text="surname" />

            <TextView
                android:id="@+id/txt_usrCompleanno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/txtuserdescrizione3"
                app:layout_constraintTop_toBottomOf="@+id/txt_usrCognome"
                tools:text="birthday" />

            <TextView
                android:id="@+id/txt_usrDescrizione"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtuserdescrizione4"
                app:layout_constraintTop_toBottomOf="@+id/txt_usrCompleanno"
                tools:text="user description" />

            <TextView
                android:id="@+id/txtuserdescrizione2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_usr_data_confirm_cognome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtuserdescrizione" />

            <TextView
                android:id="@+id/txtuserdescrizione3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_usr_data_confirm_data_di_nascita"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtuserdescrizione2" />

            <TextView
                android:id="@+id/txtuserdescrizione4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_usr_data_confirm_descrizione"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtuserdescrizione3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>